db-sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  labels:
    app: web
spec:
  serviceName: db
  selector:
    matchLabels:
      app: db
  replicas: 1
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: db
      containers:
        - name: main
          image: mariadb
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: db
