wordpress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      volumes:
        - name: wordpress
          persistentVolumeClaim:
            claimName: wordpress
      containers:
        - name: main
          image: wordpress
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/html
              name: wordpress
